# rust-anycollections

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: anyhashmap.rs  anyvec.rs  cast.rs  lib.rs
