[package]
name = "anycollections"
version = "0.1.0"
authors = ["sinhrks <sinhrks@gmail.com>"]
repository = "https://github.com/sinhrks/rust-typevec"
license = "BSD-3-Clause"
readme = "README.md"
description = "Rust Vec which can contain arbitrary types"
keywords = [ "vec", "hashmap", "any" ]

[dependencies]
unsafe-any = "0.4.1"
