[package]
name = "anycollections"
version = "0.2.0"
authors = ["sinhrks <sinhrks@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
description = "Rust Vec and HashMap which can contain arbitrary types"
keywords = [ "vec", "hashmap", "any" ]
documentation = "https://docs.rs/anycollections/"
repository = "https://github.com/sinhrks/rust-anycollections"

[dependencies]
unsafe-any = "0.4.1"
